--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "type-check": "tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
+    "@antv/hierarchy": "^0.6.14",
+    "@antv/x6": "^2.18.1",
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
@@ -73,6 +75,8 @@
     "@tiptap/suggestion": "^2.12.0",
     "cal-sans": "^1.0.1",
     "clsx": "^2.1.1",
+    "echarts": "^5.6.0",
+    "framer-motion": "^12.12.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
     "nanoid": "^5.1.5",
