--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@svgr/webpack": "^8.1.0",
@@ -74,7 +77,9 @@
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
     "cal-sans": "^1.0.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "framer-motion": "^12.12.1",
     "lowlight": "^3.3.0",
@@ -83,17 +88,21 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.2",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.5",
     "y-webrtc": "^10.3.0",
-    "yjs": "^13.6.27"
+    "yjs": "^13.6.27",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
@@ -133,6 +142,7 @@
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.5.3",
     "tailwindcss": "4.1.7",
+    "tw-animate-css": "^1.3.0",
     "typescript": "5.8.3",
     "vitest": "^3.0.8"
   },
