--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "framer-motion": "^12.12.1",
@@ -110,6 +111,7 @@
     "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/crypto-js": "^4.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "22.15.18",
