feat: 🚀 新增自动化脚本

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_AUTH_LOGIN_URL = https://www.codecrack.cn/collaboration/api/v1/github
+NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
 
-NEXT_PUBLIC_SERVER_URL = https://www.codecrack.cn/collaboration
+NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
 
-NEXT_PUBLIC_WEBSOCKET_URL = wss://www.codecrack.cn/ws
+NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.caodecrack.cn
