perf: ⚡️ 优化邮箱登录的错误回调代码

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
+NEXT_PUBLIC_AUTH_LOGIN_URL = http://localhost:8080/api/v1/auth/github
 
-NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
+NEXT_PUBLIC_SERVER_URL = http://localhost:8080
 
 NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.caodecrack.cn
