--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@ NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
 
 NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
 
-NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.caodecrack.cn
+NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.codecrack.cn
