--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.7",
@@ -100,6 +101,7 @@
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.5",
     "y-webrtc": "^10.3.0",
