--- a/package.json
+++ b/package.json
@@ -37,12 +37,6 @@
     "@tiptap-pro/extension-details-summary": "^2.19.1",
     "@tiptap-pro/extension-drag-handle": "^2.19.1",
     "@tiptap-pro/extension-drag-handle-react": "^2.19.1",
-    "@tiptap-pro/extension-emoji": "^2.19.1",
-    "@tiptap-pro/extension-file-handler": "^2.19.1",
-    "@tiptap-pro/extension-mathematics": "^2.19.1",
-    "@tiptap-pro/extension-node-range": "^2.19.1",
-    "@tiptap-pro/extension-table-of-contents": "^2.19.1",
-    "@tiptap-pro/extension-unique-id": "^2.19.1",
     "@tiptap/core": "^2.12.0",
     "@tiptap/extension-bullet-list": "^2.12.0",
     "@tiptap/extension-character-count": "^2.12.0",
@@ -51,8 +45,15 @@
     "@tiptap/extension-collaboration": "^2.12.0",
     "@tiptap/extension-collaboration-cursor": "^2.12.0",
     "@tiptap/extension-color": "^2.12.0",
+    "@tiptap/extension-details": "^2.23.1",
+    "@tiptap/extension-details-content": "^2.23.1",
+    "@tiptap/extension-details-summary": "^2.23.1",
     "@tiptap/extension-document": "^2.12.0",
+    "@tiptap/extension-drag-handle": "^2.23.1",
+    "@tiptap/extension-drag-handle-react": "^2.23.1",
     "@tiptap/extension-dropcursor": "^2.12.0",
+    "@tiptap/extension-emoji": "^2.23.1",
+    "@tiptap/extension-file-handler": "^2.23.1",
     "@tiptap/extension-focus": "^2.12.0",
     "@tiptap/extension-font-family": "^2.12.0",
     "@tiptap/extension-heading": "^2.12.0",
@@ -60,6 +61,8 @@
     "@tiptap/extension-horizontal-rule": "^2.12.0",
     "@tiptap/extension-image": "^2.12.0",
     "@tiptap/extension-link": "^2.12.0",
+    "@tiptap/extension-mathematics": "^2.23.1",
+    "@tiptap/extension-node-range": "^2.23.1",
     "@tiptap/extension-ordered-list": "^2.12.0",
     "@tiptap/extension-paragraph": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
@@ -67,6 +70,7 @@
     "@tiptap/extension-superscript": "^2.12.0",
     "@tiptap/extension-table": "^2.12.0",
     "@tiptap/extension-table-header": "^2.12.0",
+    "@tiptap/extension-table-of-contents": "^2.23.1",
     "@tiptap/extension-table-row": "^2.12.0",
     "@tiptap/extension-task-item": "^2.12.0",
     "@tiptap/extension-task-list": "^2.12.0",
@@ -74,6 +78,7 @@
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-typography": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
+    "@tiptap/extension-unique-id": "^2.23.1",
     "@tiptap/pm": "^2.12.0",
     "@tiptap/react": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
