--- a/package.json
+++ b/package.json
@@ -32,11 +32,6 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tiptap-pro/extension-details": "^2.19.1",
-    "@tiptap-pro/extension-details-content": "^2.19.1",
-    "@tiptap-pro/extension-details-summary": "^2.19.1",
-    "@tiptap-pro/extension-drag-handle": "^2.19.1",
-    "@tiptap-pro/extension-drag-handle-react": "^2.19.1",
     "@tiptap/core": "^2.12.0",
     "@tiptap/extension-bullet-list": "^2.12.0",
     "@tiptap/extension-character-count": "^2.12.0",
@@ -79,8 +74,9 @@
     "@tiptap/extension-typography": "^2.12.0",
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/extension-unique-id": "^2.23.1",
+    "@tiptap/html": "^2.25.0",
     "@tiptap/pm": "^2.12.0",
-    "@tiptap/react": "^2.12.0",
+    "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/suggestion": "^2.12.0",
     "cal-sans": "^1.0.1",
@@ -88,7 +84,6 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "echarts": "^5.6.0",
     "framer-motion": "^12.12.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
@@ -111,7 +106,8 @@
     "y-prosemirror": "^1.3.5",
     "y-webrtc": "^10.3.0",
     "yjs": "^13.6.27",
-    "zod": "^3.25.32"
+    "zod": "^3.25.32",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
