--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@antv/hierarchy": "^0.6.14",
     "@antv/x6": "^2.18.1",
+    "@excalidraw/excalidraw": "^0.18.0",
+    "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
@@ -55,6 +57,7 @@
     "@tiptap/extension-dropcursor": "^2.12.0",
     "@tiptap/extension-focus": "^2.12.0",
     "@tiptap/extension-font-family": "^2.12.0",
+    "@tiptap/extension-hard-break": "3.0.0-beta.18",
     "@tiptap/extension-heading": "^2.12.0",
     "@tiptap/extension-highlight": "^2.12.0",
     "@tiptap/extension-horizontal-rule": "^2.12.0",
@@ -70,6 +73,7 @@
     "@tiptap/extension-table-row": "^2.12.0",
     "@tiptap/extension-task-item": "^2.12.0",
     "@tiptap/extension-task-list": "^2.12.0",
+    "@tiptap/extension-text": "^2.23.1",
     "@tiptap/extension-text-align": "^2.12.0",
     "@tiptap/extension-text-style": "^2.12.0",
     "@tiptap/extension-typography": "^2.12.0",
