feat: 🚀 支持 markdown 格式的复制粘贴

--- a/package.json
+++ b/package.json
@@ -91,6 +91,9 @@
     "framer-motion": "^12.12.1",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
+    "mdast-util-from-markdown": "^2.0.2",
+    "mdast-util-gfm": "^3.1.0",
+    "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
     "next": "^15.3.2",
     "react": "^19.1.0",
@@ -100,6 +103,9 @@
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.2",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
