--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/extension-color": "^2.26.0",
     "@tiptap/extension-document": "^2.26.0",
     "@tiptap/extension-dropcursor": "^2.26.0",
+    "@tiptap/extension-emoji": "^3.0.7",
     "@tiptap/extension-focus": "^2.26.0",
     "@tiptap/extension-font-family": "^2.26.0",
     "@tiptap/extension-hard-break": "3.0.0-beta.18",
@@ -111,6 +112,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "y-indexeddb": "^9.0.12",
