--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antv/x6": "^2.18.1",
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
+    "@floating-ui/dom": "^1.7.3",
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
@@ -34,56 +35,56 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.10",
-    "@tiptap-pro/extension-details": "^2.21.5",
-    "@tiptap-pro/extension-details-content": "^2.21.5",
-    "@tiptap-pro/extension-details-summary": "^2.21.5",
-    "@tiptap-pro/extension-drag-handle": "^2.21.5",
-    "@tiptap-pro/extension-drag-handle-react": "^2.21.5",
-    "@tiptap-pro/extension-emoji": "^2.21.5",
-    "@tiptap-pro/extension-file-handler": "^2.21.5",
-    "@tiptap-pro/extension-mathematics": "^2.21.5",
-    "@tiptap-pro/extension-node-range": "^2.21.5",
-    "@tiptap-pro/extension-table-of-contents": "^2.21.5",
-    "@tiptap-pro/extension-unique-id": "^2.21.5",
-    "@tiptap/core": "^2.26.0",
-    "@tiptap/extension-bullet-list": "^2.26.0",
-    "@tiptap/extension-character-count": "^2.26.0",
-    "@tiptap/extension-code-block": "^2.26.0",
-    "@tiptap/extension-code-block-lowlight": "^2.26.0",
-    "@tiptap/extension-collaboration": "^2.26.0",
-    "@tiptap/extension-collaboration-cursor": "^2.26.0",
-    "@tiptap/extension-color": "^2.26.0",
-    "@tiptap/extension-document": "^2.26.0",
-    "@tiptap/extension-dropcursor": "^2.26.0",
+    "@tiptap/core": "^3.0.7",
+    "@tiptap/extension-bullet-list": "^3.0.7",
+    "@tiptap/extension-character-count": "^3.0.7",
+    "@tiptap/extension-code-block": "^3.0.7",
+    "@tiptap/extension-code-block-lowlight": "^3.0.7",
+    "@tiptap/extension-collaboration": "^3.0.7",
+    "@tiptap/extension-collaboration-cursor": "^2.26.1",
+    "@tiptap/extension-color": "^3.0.7",
+    "@tiptap/extension-details": "^3.0.7",
+    "@tiptap/extension-details-content": "^2.26.1",
+    "@tiptap/extension-details-summary": "^2.26.1",
+    "@tiptap/extension-document": "^3.0.7",
+    "@tiptap/extension-drag-handle": "^3.0.7",
+    "@tiptap/extension-drag-handle-react": "^3.0.7",
+    "@tiptap/extension-dropcursor": "^3.0.7",
     "@tiptap/extension-emoji": "^3.0.7",
-    "@tiptap/extension-focus": "^2.26.0",
-    "@tiptap/extension-font-family": "^2.26.0",
-    "@tiptap/extension-hard-break": "3.0.0-beta.18",
-    "@tiptap/extension-heading": "^2.26.0",
-    "@tiptap/extension-highlight": "^2.26.0",
-    "@tiptap/extension-horizontal-rule": "^2.26.0",
-    "@tiptap/extension-image": "^2.26.0",
-    "@tiptap/extension-link": "^2.26.0",
-    "@tiptap/extension-ordered-list": "^2.26.0",
-    "@tiptap/extension-paragraph": "^2.26.0",
-    "@tiptap/extension-placeholder": "^2.26.0",
-    "@tiptap/extension-subscript": "^2.26.0",
-    "@tiptap/extension-superscript": "^2.26.0",
-    "@tiptap/extension-table": "^2.26.0",
-    "@tiptap/extension-table-header": "^2.26.0",
-    "@tiptap/extension-table-row": "^2.26.0",
-    "@tiptap/extension-task-item": "^2.26.0",
-    "@tiptap/extension-task-list": "^2.26.0",
-    "@tiptap/extension-text": "^2.26.0",
-    "@tiptap/extension-text-align": "^2.26.0",
-    "@tiptap/extension-text-style": "^2.26.0",
-    "@tiptap/extension-typography": "^2.26.0",
-    "@tiptap/extension-underline": "^2.26.0",
-    "@tiptap/html": "^2.26.0",
-    "@tiptap/pm": "^2.26.0",
-    "@tiptap/react": "^2.26.0",
-    "@tiptap/starter-kit": "^2.26.0",
-    "@tiptap/suggestion": "^2.26.0",
+    "@tiptap/extension-file-handler": "^3.0.7",
+    "@tiptap/extension-focus": "^3.0.7",
+    "@tiptap/extension-font-family": "^3.0.7",
+    "@tiptap/extension-hard-break": "^3.0.7",
+    "@tiptap/extension-heading": "^3.0.7",
+    "@tiptap/extension-highlight": "^3.0.7",
+    "@tiptap/extension-horizontal-rule": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-mathematics": "^3.0.7",
+    "@tiptap/extension-node-range": "^3.0.7",
+    "@tiptap/extension-ordered-list": "^3.0.7",
+    "@tiptap/extension-paragraph": "^3.0.7",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-subscript": "^3.0.7",
+    "@tiptap/extension-superscript": "^3.0.7",
+    "@tiptap/extension-table": "^3.0.7",
+    "@tiptap/extension-table-header": "^3.0.7",
+    "@tiptap/extension-table-of-contents": "^3.0.7",
+    "@tiptap/extension-table-row": "^3.0.7",
+    "@tiptap/extension-task-item": "^3.0.7",
+    "@tiptap/extension-task-list": "^3.0.7",
+    "@tiptap/extension-text": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/extension-text-style": "^3.0.7",
+    "@tiptap/extension-typography": "^3.0.7",
+    "@tiptap/extension-underline": "^3.0.7",
+    "@tiptap/extension-unique-id": "^3.0.7",
+    "@tiptap/extensions": "^3.0.7",
+    "@tiptap/html": "^3.0.7",
+    "@tiptap/pm": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
+    "@tiptap/suggestion": "^3.0.7",
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -112,7 +113,6 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tippy.js": "^6.3.7",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "y-indexeddb": "^9.0.12",
