--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
     "next": "^15.3.2",
+    "plyr": "^3.7.8",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
