--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,7 @@
   "trailingComma": "all",
   "jsxSingleQuote": false,
   "printWidth": 100,
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/styles/index.css"
 }
