--- a/package.json
+++ b/package.json
@@ -165,6 +165,7 @@
     "postcss": "8.5.3",
     "postcss-nesting": "^13.0.1",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "4.1.7",
     "tw-animate-css": "^1.3.0",
     "typescript": "5.8.3",
