feat: 增加Mathematics 扩展 (#69)
* feat(math): 添加数学公式支持，集成katex和tiptap数学扩展

添加katex依赖并配置tiptap数学扩展
在样式文件中添加数学公式相关样式
更新pnpm锁定文件和package.json

* chore: 移除 packageManager 字段并保留 engineStrict

---------

Co-authored-by: 邓亮 <787615673@qq.com>

--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.12.1",
+    "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
