--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "@antv/hierarchy": "^0.6.14",
     "@antv/x6": "^2.18.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
     "@floating-ui/dom": "^1.7.3",
@@ -106,6 +110,8 @@
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
