解决文件拖动结束的的吞并

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "source.fixAll.eslint": "always"
   },
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
-  "cSpell.words": ["Excalidraw"]
+  "cSpell.words": ["Excalidraw"],
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
