--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "dependencies": {
     "@antv/hierarchy": "^0.6.14",
     "@antv/x6": "^2.18.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
     "@floating-ui/dom": "^1.7.3",
