--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
-    "@hookform/resolvers": "^5.0.1",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
@@ -39,6 +39,8 @@
     "@radix-ui/react-tooltip": "^1.2.6",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tiptap/core": "^3.0.7",
     "@tiptap/extension-bullet-list": "^3.0.7",
     "@tiptap/extension-character-count": "^3.0.7",
@@ -111,7 +113,7 @@
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.2",
     "remark": "^15.0.1",
@@ -127,7 +129,7 @@
     "y-prosemirror": "^1.3.5",
     "y-webrtc": "^10.3.0",
     "yjs": "^13.6.27",
-    "zod": "^3.25.32",
+    "zod": "^3.25.76",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
