--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@excalidraw/excalidraw": "^0.18.0",
     "@excalidraw/mermaid-to-excalidraw": "^1.1.2",
+    "@fingerprintjs/fingerprintjs": "^4.6.2",
     "@floating-ui/dom": "^1.7.3",
     "@fontsource/inter": "^5.2.5",
     "@hocuspocus/provider": "^3.1.1",
@@ -123,6 +124,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "y-indexeddb": "^9.0.12",
