chore: 添加 react-simple-typewriter 依赖并更新 pnpm 锁定文件

--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^3.0.2",
+    "react-simple-typewriter": "^5.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
@@ -196,5 +197,6 @@
     "node": ">=20",
     "pnpm": ">=9.0.0"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
