feat(AI组件): 添加打字机动画效果和流式响应处理
实现AI响应内容的打字机动画效果，使用typeit-react库处理文本动画
添加SSE流式响应处理，支持实时显示AI生成内容
更新package.json添加相关依赖库

--- a/package.json
+++ b/package.json
@@ -125,6 +125,8 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "typeit": "^8.8.7",
+    "typeit-react": "^2.7.8",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
