--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/forms": "^0.5.10",
@@ -99,16 +99,19 @@
     "cmdk": "^1.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
+    "mammoth": "^1.10.0",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
     "nanoid": "^5.1.5",
     "next": "^15.3.2",
+    "pdfjs-dist": "^5.4.149",
     "plyr": "^3.7.8",
     "react": "^19.1.0",
     "react-colorful": "^5.6.1",
