--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,5 @@ NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
 NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
 
 NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.codecrack.cn
+
+NEXT_PUBLIC_NOTIFICATION_WEBSOCKET_URL = https://note.codecrack.cn
