feat：新增 AI 续写 和 AI 问答功能 (#100)
* feat(ai): 添加继续写作功能及相关接口和组件

- 新增ContinueWritingParams和ContinueWritingResponse接口
- 在AI扩展中添加op属性支持
- 实现AIComponent中的继续写作逻辑
- 更新AI服务API以支持继续写作功能
- 修改用户配置界面中的AI服务名称

* fix(AI组件): 修复AI生成内容硬编码问题并添加调试日志

移除硬编码的测试内容，恢复使用动态生成的contentString
添加console.log调试日志以便跟踪内容生成

* chore: 添加 react-simple-typewriter 依赖并更新 pnpm 锁定文件

* fix(AI组件): 移除硬编码的API密钥

* feat(AI组件): 添加打字机动画效果和流式响应处理

实现AI响应内容的打字机动画效果，使用typeit-react库处理文本动画
添加SSE流式响应处理，支持实时显示AI生成内容
更新package.json添加相关依赖库

* refactor(AI组件): 移除测试按钮并清理无用代码

* feat(AI组件): 重构AI组件并添加模型选择功能

重构AI组件结构，将通用组件拆分为独立文件
新增模型选择器组件支持切换不同AI模型
优化流式响应处理逻辑和UI交互体验
移除无用代码并整理类型定义

* refactor(AI组件): 重构按钮组件和AI组件逻辑

- 使用shadcn按钮组件替换自定义按钮实现
- 移除录音功能及相关代码
- 提取动作按钮配置到单独函数
- 修复点击外部区域插入内容的逻辑
- 清理无用代码和图标导入

* feat(AI组件): 实现SSE流式处理AI生成内容

添加SSE支持以流式处理AI生成内容，优化响应处理逻辑
重构ContinueWriting接口返回类型以匹配SSE响应格式
在请求服务中添加sse方法处理流式请求
更新AI组件处理流式数据的逻辑

* feat(AI组件): 优化AI组件交互与代码块处理

- 移除调试用的console.log语句
- 为useAnimatedText添加editor参数以支持代码块自动检测
- 重构AI组件流式响应处理逻辑，使用状态管理累积响应
- 添加请求中止功能，支持取消正在进行的AI请求
- 清空输入框在请求完成时

* refactor(AI组件): 移除context属性并优化AI响应处理

- 删除不再使用的react-simple-typewriter依赖
- 移除AI组件中的context属性及相关处理逻辑
- 优化useAnimatedText钩子，移除编辑器依赖
- 改进AI响应处理流程，使用ref存储累积响应
- 调整AI组件UI显示逻辑，区分加载和完成状态

* feat(AI组件): 重构AI组件状态管理并添加输入面板

- 将loading状态重构为aiState状态机，包含input/loading/display三种状态
- 新增AIInputPanel组件封装输入面板逻辑
- 修复状态切换时的动画文本重置问题
- 更新硅基流动服务名称英文拼写

* style(AI组件): 将响应内容的div标签改为p标签以改进语义

* fix(AIComponent): 修复点击外部区域时未正确更新内容和隐藏组件的问题

* refactor(AIComponent): 移除已注释的abort逻辑并优化响应状态重置

---------

Co-authored-by: 邓亮 <787615673@qq.com>

--- a/package.json
+++ b/package.json
@@ -127,6 +127,8 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "typeit": "^8.8.7",
+    "typeit-react": "^2.7.8",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -199,5 +201,6 @@
     "node": ">=20",
     "pnpm": ">=9.0.0"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
