--- a/package.json
+++ b/package.json
@@ -102,11 +102,13 @@
     "date-fns": "^4.1.0",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
+    "hast-util-to-html": "^9.0.5",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.511.0",
     "mammoth": "^1.10.0",
+    "markdown-it": "^14.1.0",
     "mdast-util-from-markdown": "^2.0.2",
     "mdast-util-gfm": "^3.1.0",
     "micromark-extension-gfm": "^3.0.0",
@@ -120,6 +122,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.2",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
@@ -128,8 +131,6 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "typeit": "^8.8.7",
-    "typeit-react": "^2.7.8",
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
@@ -150,6 +151,7 @@
     "@types/js-beautify": "^1.14.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "22.15.18",
     "@types/prettier": "^3.0.0",
     "@types/react": "19.1.4",
