--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@hocuspocus/provider": "^3.1.1",
     "@hocuspocus/server": "^3.1.1",
     "@hookform/resolvers": "^5.1.1",
+    "@pqina/flip": "^1.8.4",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.14",
