--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "ua-parser-js": "^2.0.4",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "y-indexeddb": "^9.0.12",
     "y-prosemirror": "^1.3.5",
     "y-webrtc": "^10.3.0",
