--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "react-hook-form": "^7.60.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
+    "react-photo-view": "^1.2.7",
     "react-resizable-panels": "^3.0.2",
     "react-use-audio-player": "^4.0.2",
     "recharts": "2.15.4",
