--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "date-fns": "^4.1.0",
     "file-type": "^21.0.0",
     "framer-motion": "^12.12.1",
+    "frappe-gantt": "^1.0.4",
     "hast-util-to-html": "^9.0.5",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
@@ -158,6 +159,7 @@
     "@tailwindcss/postcss": "^4.1.7",
     "@tailwindcss/typography": "^0.5.16",
     "@types/crypto-js": "^4.2.0",
+    "@types/frappe-gantt": "^0.9.0",
     "@types/js-beautify": "^1.14.3",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
