--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -3,6 +3,9 @@ name: Code Review
 on:
   pull_request_target:
     types: [opened, synchronize, reopened]
+  pull_request:
+    types: [opened, synchronize, reopened]
+  workflow_dispatch:
 
 jobs:
   code-review:
