Feat:增加了文本评论 (#169)
* feat(extensions): 添加评论功能扩展

实现评论功能的核心逻辑，包括评论的添加、删除和激活状态管理
支持通过快捷键触发评论功能
添加评论相关的存储和事件回调机制

* feat(评论功能): 添加评论功能及相关UI和命令

添加评论功能扩展，包括评论按钮、状态检测和命令处理
在TextMenu中添加评论按钮并支持快捷键操作
实现评论的添加和移除功能

* feat(文档): 添加评论输入组件到文档编辑器

实现文档编辑器的评论功能，允许用户在选中文本时添加评论

* feat(comment): 实现评论功能的核心逻辑和样式

添加评论相关的状态管理、样式和交互逻辑
- 创建 commentStore 管理评论状态
- 扩展 Comment 扩展支持 markText 属性
- 重构评论输入组件使用全局状态
- 添加评论样式类
- 优化评论交互流程

* feat(comment): 优化评论功能交互和位置处理

重构评论功能，使评论弹窗位置自动计算并显示相关标记文本
将评论标记文本合并处理，避免重复设置
简化评论激活逻辑，移除冗余代码

* fix(Comment): 修复评论标记在光标模式下更新不一致的问题

优化评论标记逻辑，处理光标模式下更新评论时的属性合并问题。当在光标模式下更新评论时，现在会正确遍历文档并更新所有匹配的评论标记，确保一致性。

* refactor(Comment): 修改评论功能实现方式

- 允许 commentId 为 null 并简化 markText 处理逻辑
- 移除不必要的图标和 uuid 依赖
- 添加评论项删除功能并优化 UI 展示
- 清理未使用的代码和事件处理

* refactor(CommentInput): 移除未使用的状态并优化位置更新逻辑

移除不再使用的isExpanded状态变量
添加滚动和窗口大小变化监听来动态更新位置
简化输入框的展开/收起逻辑

* perf(CommentInput): 使用防抖优化评论输入框位置更新

使用useCallback和debounce优化updatePosition函数，避免频繁计算和更新位置
移除不必要的窗口resize监听，仅在滚动时使用防抖更新位置

* style(CommentInput): 优化标记项列表的样式和滚动行为

添加滚动条并限制列表高度，防止内容溢出
为删除按钮添加平滑的透明度过渡效果

* fix(comment): 修复评论功能中编辑器视图检查和属性处理问题

修复编辑器视图未检查导致的潜在错误，优化评论标记属性处理逻辑
确保在弹窗关闭时清空评论内容和标记文本
改进评论ID生成和属性更新逻辑，区分选区模式和光标模式

* refactor(comment): 简化评论状态管理并优化输入组件

移除评论组件中未使用的position和selectedText状态，简化状态管理
使用useMemo优化防抖函数性能
添加评论输入验证和错误提示
优化输入框样式和交互体验

* feat(CommentInput): 使用floating-ui实现智能定位和自动更新

添加@floating-ui/dom库来实现评论输入框的智能定位功能，包括边界检测、自动翻转和尺寸限制
移除原有的简单定位逻辑，增加虚拟锚点元素和自动更新机制
添加错误处理和降级方案，当定位失败时回退到原始逻辑
优化性能，使用requestAnimationFrame进行自动更新

* refactor(CommentInput): 优化评论输入框定位逻辑

使用ResizeObserver和IntersectionObserver替代autoUpdate
移除不再使用的注释代码

* ci(代码审查): 增强代码审查工作流的安全性

修改代码审查工作流以使用 pull_request_target 触发，避免执行 PR 中的任意代码
将 PR head 作为数据单独拉取，不直接执行
优化审查报告的输出和处理逻辑

* fix(comment): 修复评论标记重叠问题并优化激活回调

添加防抖处理评论激活回调，避免频繁触发
重构评论标记设置逻辑，正确处理与现有标记的重叠情况
调整嵌套评论的样式层级

* fix(Comment): 优化评论激活逻辑并调整样式

为评论激活回调添加防抖处理，避免频繁触发
调整嵌套评论的背景色以增强视觉区分

* refactor(Comment): 使用 commands API 简化评论标记逻辑

移除手动处理标记重叠的复杂逻辑，改为直接使用 commands.setMark 方法。这使得代码更简洁且更符合 ProseMirror 的最佳实践。

--

--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -10,7 +10,9 @@ on:
 jobs:
   code-review:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.draft == false
+    # 仅在 pull_request_target（可访问 secrets）且非草稿时运行
+    if: github.event_name == 'pull_request_target' && github.event.pull_request.draft == false
+
     permissions:
       contents: read
       pull-requests: write
@@ -48,16 +50,18 @@ jobs:
           # 直接运行 TypeScript 文件
           OUTPUT=$(npx tsx scripts/code-review.ts ${{ github.event.pull_request.number }} $BASE_SHA $PR_HEAD_SHA)
 
-          # 提取报告内容
+          # 提取报告内容（由你的脚本以 --REPORT_START/END-- 包围）
           REPORT=$(echo "$OUTPUT" | sed -n '/---REPORT_START---/,/---REPORT_END---/p' | sed '1d;$d')
 
-          # 保存报告
+          # 保存报告供下一步评论使用
           echo "$REPORT" > review.md
 
-          # 输出到 GitHub Actions 日志
-          echo "review<<EOF" >> $GITHUB_OUTPUT
-          echo "$REPORT" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          # 也输出到 job 输出（如需复用）
+          {
+            echo "review<<EOF"
+            echo "$REPORT"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
       - name: Post Review Comment
         uses: actions/github-script@v7
@@ -66,20 +70,18 @@ jobs:
             const fs = require('fs');
             const reviewContent = fs.readFileSync('review.md', 'utf8');
 
-            // 查找现有的审查评论
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
             });
 
-            const existingComment = comments.find(comment => 
-              comment.user.type === 'Bot' && 
+            const existingComment = comments.find(comment =>
+              comment.user.type === 'Bot' &&
               comment.body.includes('🤖 AI 代码审查报告')
             );
 
             if (existingComment) {
-              // 更新现有评论
               await github.rest.issues.updateComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -87,7 +89,6 @@ jobs:
                 body: reviewContent
               });
             } else {
-              // 创建新评论
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -95,10 +96,3 @@ jobs:
                 body: reviewContent
               });
             }
-
-      - name: Create Review Summary
-        run: |
-          echo "## 📋 代码审查摘要" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ 已使用 DeepSeek 模型完成代码审查" >> $GITHUB_STEP_SUMMARY
-          echo "🔗 查看详细审查结果请查看 PR 评论" >> $GITHUB_STEP_SUMMARY
