--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "lint:ci": "eslint \"**/*.{ts,tsx,js,jsx}\"",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,cjs,mjs,json}\"",
     "format:ci": "prettier --list-different \"**/*.{ts,tsx,js,jsx}\"",
-    "postinstall": "husky install",
-    "commit": "git-cz",
     "prepare": "husky",
+    "commit": "git-cz",
     "type-check": "tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
@@ -40,7 +39,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.6",
-    "@sentry/nextjs": "^10.20.0",
+    "@sentry/nextjs": "^10.22.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -108,6 +107,7 @@
     "framer-motion": "^12.12.1",
     "frappe-gantt": "^1.0.4",
     "hast-util-to-html": "^9.0.5",
+    "import-in-the-middle": "^2.0.0",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
@@ -136,6 +136,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
+    "require-in-the-middle": "^8.0.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
@@ -218,5 +219,5 @@
     "pnpm": ">=9.0.0"
   },
   "engineStrict": true,
-  "packageManager": "pnpm@9.4.0"
+  "packageManager": "pnpm@10.20.0"
 }
