--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "type-check": "tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
+    "@azure/core-sse": "^2.3.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
