--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,8 @@
 NEXT_PUBLIC_AUTH_LOGIN_URL = https://api.codecrack.cn/api/v1/auth/github
 
-NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
+// NEXT_PUBLIC_SERVER_URL = https://api.codecrack.cn
+
+ NEXT_PUBLIC_SERVER_URL =  http://127.0.0.1:8080
 
 NEXT_PUBLIC_WEBSOCKET_URL = wss://ws.codecrack.cn
 
