fix: 🧩 修复控制台相关警告并修复ws数据获取不到问题

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format:ci": "prettier --list-different \"**/*.{ts,tsx,js,jsx}\"",
     "prepare": "husky",
     "commit": "git-cz",
-    "type-check": "tsc --noEmit --project tsconfig.json"
+    "type-check": "tsc --noEmit --project tsconfig.build.json"
   },
   "dependencies": {
     "@azure/core-sse": "^2.3.0",
