--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "**/*.ts",
     "**/*.tsx",
     "next-env.d.ts",
-    "dist/types/**/*.ts"
+    "dist/types/**/*.ts",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": ["node_modules", "tests", ".next"]
 }
