feat(文档头部): 添加复制按钮功能,粘贴到微信公众号 (#210)
* feat(文档头部): 添加复制按钮功能并集成juice库处理HTML内联样式

添加复制按钮到文档头部组件，支持将编辑器内容复制为微信公众号兼容格式
新增wx工具模块处理HTML清理、图片链接转换和CSS内联
添加juice依赖用于CSS内联样式处理

* feat(Chart): 添加图表PNG导出功能

添加@zumer/snapdom依赖以支持图表导出为PNG功能
在Chart组件中实现图表渲染完成后自动生成PNG并保存为base64
优化Chart的renderHTML方法以支持显示PNG或回退样式

* fix(Chart): 使用 ref 缓存 updateAttributes 避免重复触发 effect

---------

Co-authored-by: 邓亮 <787615673@qq.com>

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@tiptap/starter-kit": "^3.0.7",
     "@tiptap/suggestion": "^3.0.7",
     "@types/lodash-es": "^4.17.12",
+    "@zumer/snapdom": "^2.0.1",
     "cal-sans": "^1.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -119,6 +120,7 @@
     "html2pdf.js": "^0.12.1",
     "image-meta": "^0.2.2",
     "import-in-the-middle": "^2.0.0",
+    "juice": "^11.0.3",
     "katex": "^0.16.22",
     "lodash-es": "^4.17.21",
     "lowlight": "^3.3.0",
